# ewmh-client

./: .flake8  README.md  ewmh_client.py  old-ewmh.md  pyproject.toml  requirements.txt
